@@ -3,6 +3,9 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+9/27/23: Added a non-Qt version of Ctfplotter to install package and changed
+SerialEM to use this unconditionally unless a graph is being saved.
+
 9/20/23: Fixed external scripts hanging when STOP is pressed and made module
 raus a SEMexited exception with a different message.
 
